# practice_specKit

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
history/prompts/001-calculator-library/: 0001-create-calculator.plan.prompt.md  0002-generate-calculator-tasks.tasks.prompt.md  0003-implement-calculator-library.implement.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
history/prompts/general/: 0001-commit-and-create-pr.general.prompt.md  1-create-and-push-to-github-repository.general.prompt.md
specs/001-calculator-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-calculator-library/contracts/: calculator_api.py
src/calculator/: library.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/unit/: test_calculator.py
