[project]
name = "calculator"
version = "0.1.0"
description = "A simple Python library for basic arithmetic operations."
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
readme = "README.md"
keywords = ["calculator", "arithmetic", "math"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["calculator"]

